# cursortimer

./: README.md
cursor-eta-indicator/: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  build.sh  codecov.yml  demo.sh  pyproject.toml  pytest.ini  run_tests.sh  setup.py  tox.ini
cursor-eta-indicator/.github/: dependabot.yml
cursor-eta-indicator/.github/ISSUE_TEMPLATE/: ci_failure.md
cursor-eta-indicator/.github/workflows/: ci.yml  codeql.yml  pypi-manual.yml  pypi.yml  release.yml  test-build.yml  vscode-extension.yml  vscode.yml
cursor-eta-indicator/cursor_eta/: __init__.py  __main__.py  agent_with_eta.py  eta_bridge.py  py.typed
cursor-eta-indicator/docs/: API_REFERENCE.md  CI_PIPELINE.md  ETA-006_RELEASE_SUMMARY.md  PUBLISHING_QUICKSTART.md  PYPI_SETUP.md  RELEASE_SUMMARY.md  VSCODE_EXTENSION.md  VSCODE_PUBLISHING.md
cursor-eta-indicator/examples/: basic_usage.py  vscode_integration.py
cursor-eta-indicator/python/: cursor_integration_example.py  test_agent_eta.py
cursor-eta-indicator/scripts/: bump_version.py  check_versions.py
cursor-eta-indicator/tests/: __init__.py  test_agent_eta.py  test_cli.py  test_decorator.py  test_eta_bridge.py  test_init.py  test_main.py  test_tracker.py  test_wrapper.py
cursor-eta-indicator/vscode-extension/: .eslintrc.json  .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json
cursor-eta-indicator/vscode-extension/src/: extension.ts
